--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,29 @@
 zuul:
+  sensitiveHeaders: Cookie,Set-Cookie
   prefix: /api
   ignored-services: '*'
   routes:
     manageuser:
       path: /ManageUser/**
       serviceId: MANAGE-USER
+    manageapp:
+      path: /ManageApp/**
+      serviceId: MANAGE-APP
 ribbon:
   eureka:
     enabled: false
 MANAGE-USER:
   ribbon:
     listOfServers: 127.0.0.1:8906
+MANAGE-APP:
+  ribbon:
+    listOfServers: 127.0.0.1:8907
 hystrix:
   command:
     default:
       execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 12000
+        timeout:
+          enabled: false
 spring:
   zipkin:
     base-url: http://localhost:8903/
