--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ zuul:
   ignored-services: '*'
   routes:
     manageuser:
-      path: /ManageUser/**
+      path: /user/**
       serviceId: MANAGE-USER
     manageapp:
       path: /ManageApp/**
